# chicken

./: Cargo.toml
generateDominoes/: main.py  pipPositions.txt  pyvenv.cfg
src/: main.rs
